# Flanger

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/FlangerPlugin/: CombFilter.h  Flanger.h  LFO.h  Params.h  PluginProcessor.h
plugin/source/: CombFilter.cpp  Flanger.cpp  LFO.cpp  Params.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/dsp/: Flanger.cpp  Flanger.h  LFO.cpp  LFO.h  TapeSaturation.cpp  TapeSaturation.h
plugin/src/gui/: DelayComponent.h  FooterComponent.h  GainMeter.h  HeaderComponent.h  LFOComponent.h  OutputComponent.h  Spirograph.h  VisualComponent.h
plugin/src/gui/components/: DelayComponent.h  Group.h  HeaderComponent.h  Knob.h  LFOComponent.h  OutputComponent.h  TopComponent.h  VisualComponent.cpp  VisualComponent.h
plugin/src/gui/controls/: Button.h  ComboBox.h  Group.h  Knob.h  Label.h  PresetPanel.h
plugin/src/gui/controls/lookandfeel/: InvertPolarityLookAndFeel.h  KnobLookAndFeel.h  PowerButtonLookAndFeel.h  ToggleButtonLookAndFeel.h  TransparentButtonLookAndFeel.h  TransparentComboBoxLookAndFeel.h
plugin/src/gui/visuals/: GainMeter.h  Spirograph.h
plugin/src/utils/: Colours.h  Params.cpp  Params.h  Utils.h
